checkstyle: model/cms; refs #25581